chore: buildconfig fixes